I added info to the 3 files and tried to find a good color scheme but couldn't find one

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 <div class="sidenav">
   <a href="about.htm">About</a>
   <h1> </h1>
-  <a href="topic1.htm">Topic 1</a>
+  <a href="topic1.htm">History of Console Programming</a>
   <h1> </h1>
-  <a href="topic2.htm">Topic 2</a>
+  <a href="topic2.htm">Console Applications</a>
   <h1> </h1>
-  <a href="topic3.htm">Topic 3</a>
+  <a href="topic3.htm">Paul Allen</a>
 </div>
-
