--- a/topic2.htm
+++ b/topic2.htm
@@ -1,2 +1,4 @@
 <!DOCTYPE html>
+<p>A console application is a computer program designed with only a text only computer interface. Certain text interfaces include the Graphic User Interface known as a GUI. For example, a text interface with a GUI can be the Win32 console in Microsoft Windows, the Terminal in Mac OS X, and the Xterm in Unix. Console applications were kept in modern programming environments because it makes the learning process of a new programming language easier by removing the graphical user interface. If a console application is being ran by a group of people with an owner, a graphical user interface is not needed making it faster and more manageable to maintain.</p>  
+
 <a href="index.html">Home</a>
