--- a/topic3.htm
+++ b/topic3.htm
@@ -1,1 +1,4 @@
+<!DOCTYPE html>
+<p>Paul Allen was an American business magnate, researcher, investor, and philanthropist. He is most well-known for co-founding the Microsoft Corporation with Bill Gates in 1975. This caused the microcomputer revolution in the 1970s and the 1980s and Microsoft further became the largest personal computer software company. Allen founded Vulcan Inc alongside with Jody Allen. Vulcan Inc. is a private held company that managed his various business and philanthropic efforts.</p>
+
 <a href="index.html">Home</a>
