i added a little info in About page and considered several color gradients for my background

--- a/about.htm
+++ b/about.htm
@@ -1,2 +1,3 @@
 <!DOCTYPE html>
+<p>Console Programming is having an input like a keyboard and programming it to the output which is your screen</p>
 <a href="index.html">Home</a>
