--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         position: relative;
         top: 450px;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        bottom: 200px;
       }
       .accordion:hover {
         background-color: rgb(53, 71, 153);
@@ -31,6 +32,7 @@
         top: 450px;
         width: 100%;
         color: #daa520;
+        bottom: 200px;
       }
       @media (max-width: 480px) {
   [class*="ok"] {
