--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         color: #daa520;
         cursor: pointer;
         padding: 18px;
-        width: 100%;
+        width: 70%;
         text-align: center;
         outline: none;
         transition: .4s;
@@ -19,6 +19,7 @@
         top: 450px;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         bottom: 200px;
+        left: 350px;
       }
       .accordion:hover {
         background-color: rgb(53, 71, 153);
@@ -30,7 +31,7 @@
         overflow: hidden; 
         position: relative;
         top: 450px;
-        width: 100%;
+        width: 70%;
         color: #daa520;
         bottom: 200px;
       }
@@ -38,6 +39,19 @@
   [class*="ok"] {
     height: 25%;
     width: 70%;
+  }
+}
+@media (max-width: 480px) {
+  [class*="accordion"] {
+    left: 200px;
+    width: 50%
+  }
+}
+@media (max-width: 480px) {
+  [class*="panel"] {
+    left: 200px;
+    width: 50%;
+    padding: 0px
   }
 }
 </style>
