--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         width: 70%;
         color: #daa520;
         bottom: 200px;
+        left: 350px;
       }
       @media (max-width: 480px) {
   [class*="ok"] {
