--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         background-color: rgb(53, 71, 153);
       }
       .panel {
-        padding: 0 18px;
+        padding: 0 0px;
         background-color: #1e2761;
         display: none; 
         overflow: hidden; 
@@ -35,6 +35,7 @@
         color: #daa520;
         bottom: 200px;
         left: 350px;
+        text-align: center
       }
       @media (max-width: 480px) {
   [class*="ok"] {
